--- a/MyProject.cfg
+++ b/MyProject.cfg
@@ -5,7 +5,7 @@
     <VALUE>
       <COUNT>3</COUNT>
       <VALUE0>
-        <VAL>LOW:$C4</VAL>
+        <VAL>LOW:$E4</VAL>
       </VALUE0>
       <VALUE1>
         <VAL>HIGH:$D9</VAL>
