--- a/MyProject.cfg
+++ b/MyProject.cfg
@@ -1,18 +1,15 @@
 <?xml version="1.0"?>
 <MCU_DEVICE_FLAGS>
   <DEVICE>
-    <DEVICE_NAME>ATMEGA128</DEVICE_NAME>
+    <DEVICE_NAME>ATMEGA32</DEVICE_NAME>
     <VALUE>
-      <COUNT>3</COUNT>
+      <COUNT>2</COUNT>
       <VALUE0>
-        <VAL>LOW:$E4</VAL>
+        <VAL>LOW:$C4</VAL>
       </VALUE0>
       <VALUE1>
         <VAL>HIGH:$D9</VAL>
       </VALUE1>
-      <VALUE2>
-        <VAL>EXTENDED:$FF</VAL>
-      </VALUE2>
     </VALUE>
   </DEVICE>
   <BOOT>0</BOOT>
