--- a/MyProject.cfg
+++ b/MyProject.cfg
@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 <MCU_DEVICE_FLAGS>
   <DEVICE>
-    <DEVICE_NAME>ATMEGA32</DEVICE_NAME>
+    <DEVICE_NAME>ATMEGA32A</DEVICE_NAME>
     <VALUE>
       <COUNT>2</COUNT>
       <VALUE0>
-        <VAL>LOW:$E4</VAL>
+        <VAL>LOW:$FF</VAL>
       </VALUE0>
       <VALUE1>
         <VAL>HIGH:$D9</VAL>
